<resources>
    <string name="app_name">Lawyer</string>
    <string name="select_language">SELECT LANGUAGE</string>
    <string name="eng">English</string>
    <string name="arabic">عربي</string>
    <string name="user_name">Username</string>
    <string name="pass">Password*</string>
    <string name="login">LOGIN</string>
    <string name="or">Or</string>
    <string name="register_now">Register Now</string>
    <string name="forget_pass">Forget password?</string>
    <string name="email">Email*</string>
    <string name="send">Send</string>
    <string name="chooce_register_type">Please chooce the registration type</string>
    <string name="register_customer">Register as customer</string>
    <string name="register_lawyer">Register as lawyer</string>
    <string name="customer_register">CUSTOMER REGISTRATION</string>
    <string name="remember_me">Remember me</string>
    <string name="first_name">First Name</string>
    <string name="email_userName">Email (User Name)</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="accept_privacy"><u>Accept Privacy Condition</u></string>
    <string name="register">Register</string>
    <string name="lawyer_register">Lawyer Regstration</string>
    <string name="lawyer_name">Lawyer Name*</string>
    <string name="description">Description*</string>
    <string name="major_cases">Major cases</string>
    <string name="avilable_time">Available Time</string>
    <string name="avilable_date">Available Date</string>
    <string name="address">Address</string>
    <string name="mobile">Mobile*</string>
    <string name="telephone">Telephone</string>
    <string name="consultation">Consultation Fee</string>
    <string name="sms_verification">SMS VERIFICATION</string>
    <string name="enter_sms_code">Enter the verification code below</string>
    <string name="resend_sms">Resend verification code</string>
    <string name="submit">Submit</string>
    <string name="lawyer_profile">Lawyer Profile</string>
    <string name="lawyer_member">LAWYER MEMBERSHIP</string>
    <string name="welcome_to">Welcome to</string>
    <string name="renew_subscribtion">RENEW SUBSCRIBTION</string>
    <string name="select_package">Select the package and the pay online with KNET</string>
    <string name="select_package_hint">Select Package</string>
    <string name="renew">RENEW</string>
    <string name="YourMeetingIsRescheduled">Your Meeting Is Rescheduled</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_profile">USER\'S PROFILE</string>
    <string name="change_pass">Change Password</string>
    <string name="edit">EDIT</string>
    <string name="save">Save</string>
    <string name="view_detail">View Details</string>
    <string name="delete">Delete</string>
    <string name="quotations">QUOTATIONS</string>
    <string name="view">VIEW</string>
    <string name="consultation_fee">CONSULTATION FEE :</string>
    <string name="lawyer_book_meet">BOOK A MEETING</string>
    <string name="view_quotation">VIEW QUOTATION</string>
    <string name="approve">APPROVE</string>
    <string name="request_details">REQUEST DETAILS</string>
    <string name="case_type">Case Type</string>
    <string name="posted_date">Posted Date</string>
    <string name="add_attachment"><u>ADD NEW ATTACHMENT</u></string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="about_us">ABOUT US</string>
    <string name="privacy_conditions">PRIVACY CONDITIONS</string>
    <string name="claims_complain"><![CDATA[CLAIMS & COMPLAIN]]></string>
    <string name="last_name">Last Name</string>
    <string name="comment">Comment</string>
    <string name="contact_us">CONTACT US</string>
    <string name="draft_contract">DARFT A CONTRACT</string>
    <string name="title">Title</string>
    <string name="attach_file">Attache File</string>
    <string name="browse">Browse</string>
    <string name="consultation_request">CONSULTATION REQUEST</string>
    <string name="case_title">Case Title</string>
    <string name="view_profile">View Profile</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="attach_quotation">ATTACH QUOTATION</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="my_requests">My Requests</string>
    <string name="request_history">Request History</string>
    <string name="requsted_date">Requested Date</string>
    <string name="find_lawyer">Find Lawyer</string>
    <string name="upcoming">UPCOMING</string>
    <string name="reschecduled">RE-SCHEDULED</string>
    <string name="lawyers">LAWYERS</string>
    <string name="open_requests">Open Requests</string>
    <string name="request_received">Request Received</string>
    <string name="canceled">Canceled</string>
    <string name="memmber_number">Memmber Number</string>
    <string name="private_requests">PRIVATE REQUESTS</string>
    <string name="all_requests">All Requests</string>
    <string name="name_english">Name (English)</string>
    <string name="name_arabic">Name (Arabic)</string>
    <string name="new_password">New Password</string>
    <string name="cancele">Cancele</string>
    <string name="lawyer_name_english">Lawyer name (english)</string>
    <string name="lawyer_name_arabic">Lawyer name (arabic)</string>
    <string name="description_english">Description (english)</string>
    <string name="description_arabic">Description (Arabic)</string>
    <string name="major_cases_english">Major case (English)</string>
    <string name="major_cases_arabic">Major case (Arabic)</string>
    <string name="office_phone_1">Office phone 1</string>
    <string name="office_phone_2">Office phone 2</string>
    <string name="attached_files">Attached Files</string>
    <string name="attachment">Attachment</string>
    <string name="uploading" >Uploading</string>
    <string name="messagesent">Message sent</string>
    <string name="errorAttachment">Error attachment</string>
</resources>
