<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_b"
    android:padding="@dimen/_15sdp"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/MyLargeTextViewStyle"
        android:text="@string/claims_complain"/>


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/progress"
        android:visibility="gone"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardViewStyle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_8sdp">

                <EditText
                    android:id="@+id/firstName"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/first_name"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/lastName"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/last_name"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/email"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/mobile"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/mobile"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/comment"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:hint="@string/comment"
                    android:inputType="text" />

                <TextView
                    style="@style/ButtonTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:backgroundTint="@color/blue"
                    android:text="@string/send"
                    android:id="@+id/send"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>
</LinearLayout>