<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_b"
    android:orientation="vertical"
    tools:context=".view.register.LawyerRegistration">

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/wholeView">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_80sdp">

        <android.support.v7.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_18sdp"
                android:layout_marginRight="@dimen/_18sdp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/nameEnglish"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_80sdp"
                    android:hint="@string/lawyer_name_english"
                    android:inputType="text" />

                <!--<al.ib.lawyer.EditTextCustomLanguage-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/test1"-->
                <!--/>-->

                <!--<al.ib.lawyer.EditTextCustomLanguage-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/test2"-->
                <!--/>-->
                <EditText
                    android:id="@+id/nameArabic"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:hint="@string/lawyer_name_arabic"
                    android:inputType="text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/descEnglish"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_80sdp"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:hint="@string/description_english"
                        android:inputType="textMultiLine" />

                    <EditText
                        android:id="@+id/descArabic"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_80sdp"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:hint="@string/description_arabic"
                        android:inputType="textMultiLine" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/majorEnglish"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_80sdp"
                        android:layout_margin="@dimen/_5sdp"
                        android:gravity="center"
                        android:hint="@string/major_cases_english"
                        android:layout_weight="1"
                        android:inputType="textMultiLine" />

                    <EditText
                        android:id="@+id/majorArabic"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_80sdp"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:hint="@string/major_cases_arabic"
                        android:inputType="textMultiLine" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"

                    android:orientation="horizontal">

                    <!--<EditText-->
                    <!--android:id="@+id/lawyerDate"-->
                    <!--style="@style/EditTextStyle"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginEnd="@dimen/_5sdp"-->
                    <!--android:layout_weight="1"-->
                    <!--android:drawableEnd="@drawable/ic_keyboard_arrow_down"-->
                    <!--android:drawableTint="@color/colorAccent"-->
                    <!--android:hint="@string/avilable_date" />-->

                    <EditText
                        android:id="@+id/time"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:clickable="false"
                        android:drawableEnd="@drawable/ic_keyboard_arrow_down"
                        android:drawableTint="@color/colorAccent"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/avilable_time" />
                </LinearLayout>

                <EditText
                    android:id="@+id/memmberNumber"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:hint="@string/memmber_number"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/addressEnglish"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:hint="@string/address"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/addressArabic"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:hint="@string/address"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/mobile"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:hint="@string/mobile"
                    android:inputType="phone" />


                <EditText
                    android:id="@+id/telephone"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:hint="@string/telephone"
                    android:inputType="phone" />
                <EditText
                    android:id="@+id/officePhone1"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:hint="@string/office_phone_1"
                    android:inputType="phone" />
                <EditText
                    android:id="@+id/officePhone2"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:hint="@string/office_phone_2"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/feeAmount"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:hint="@string/consultation"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/email"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:hint="@string/email_userName"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/pass"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:hint="@string/pass"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/rePass"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:hint="@string/pass"
                    android:inputType="textPassword" />

                <CheckBox
                    android:id="@+id/acceptThePrivacy"
                    style="@style/CheckBoxStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/accept_privacy" />

                <TextView
                    android:id="@+id/register"
                    style="@style/ButtonTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:backgroundTint="@color/blue"
                    android:text="@string/register"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>


    <TextView
        style="@style/MyLargeTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center_horizontal"
        android:text="@string/lawyer_register" />

    <android.support.v7.widget.CardView
        style="@style/CardViewStyle"
        android:layout_width="@dimen/_95sdp"
        android:layout_height="@dimen/_95sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_35sdp"
        android:backgroundTint="@color/blue">

        <ImageView
            android:id="@+id/pic"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_camera" />
    </android.support.v7.widget.CardView>
    </FrameLayout>

</FrameLayout>