<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_b"
    android:orientation="vertical"
    android:padding="@dimen/_8sdp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/MyLargeTextViewStyle"
        android:text="@string/draft_contract"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/progress"
        android:visibility="gone"/>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        style="@style/CardViewStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_8sdp">

            <EditText
                android:id="@+id/title"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/title"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/curvy_bg"
                android:padding="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_15sdp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/NormalTextViewStyle"
                    android:text="@string/attach_file"
                    android:layout_gravity="center"
                    android:padding="@dimen/_4sdp"
                    android:id="@+id/attachedFile"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/browse"
                    style="@style/ButtonTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/browse"
                    android:layout_gravity="end"
                    android:gravity="end"/>
            </LinearLayout>

            <EditText
                android:id="@+id/description"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:hint="@string/description"
                android:gravity="center_horizontal"
                android:inputType="text" />

            <TextView
                style="@style/ButtonTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:backgroundTint="@color/blue"
                android:text="@string/send"
                android:id="@+id/send"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>